@@ -10,6 +10,8 @@ Features
 Bugfixes
 --------
 
+* Work around Bootstrap 4 alignment bug for RTL languages
+  (Issue #3353)
 * Handle multiple level of inherit/import nesting in Mako templates
   correctly (Issue #3349)
 * Output a more informative error when files are missing due to
